--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1></h1>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/lasagne.html">Lasagne</a>
     </body>
 </html>
