--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -62,6 +62,8 @@
                 the cheese.</p></li>
             <li><p>Bake in preheated oven for 25 minutes. Remove foil, and bake 
                 an additional 25 minutes. Cool for 15 minutes before serving.</p></li>
+            </ol>
+            <h3><a href="../index.html">Return to homepage</a></h3>
         </ol>
     </body>
 </html>
