--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagne.html">Lasagne</a>
+        <ul>
+            <li><a href="recipes/lasagne.html">Lasagne</a></li>
+            <li><a href="recipes/bread.html">Bread</a></li>
+            <li><a href="recipes/pancakes.html">Pancakes</a></li>
+        </ul>
+        
     </body>
 </html>
